# rrc_example_package

./: CMakeLists.txt  README.md  automated_submission.sh  download_logs.sh  evaluate_policy.py  goal.json  package.xml  run  run_in_simulation.py  setup.cfg  setup.py
python/rrc_example_package/: cube_env.py  example.py
rrc_example_package/: cube_env.py  cube_trajectory_env.py  example.py  rearrange_dice_env.py
rrc_example_package/scripts/: dice_example_with_gym.py  move_up_and_down.py  random_motion_with_gym_env.py  real_move_up_and_down.py  real_trajectory_example_with_gym.py  sim_dice_example_with_gym.py  sim_move_up_and_down.py  sim_trajectory_example_with_gym.py  trajectory_example_with_gym.py
scripts/: automated_submission.sh  download_logs.sh  move_up_and_down.py  run_in_simulation.py
singularity/: custom_image.def
